--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width">
 <link rel="shortcut icon" href="/favicon.ico">
 
-<link href='http://fonts.googleapis.com/css?family=Great+Vibes|Rosario:400,400italic,700,700italic|Changa+One:400,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes|Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 <!-- build:css(.) css/vendor.css -->
