--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -16,7 +16,7 @@ title: The Wedding
     </header>
     <section class="copy constrain-copy">
       <p>
-        It was <time datetime="2013-17-11">17<sup>th</sup> November 2013</time> at our <a href="{{ links.victoria-park }}">favourite spot</a> that we decided to to spend the rest of our lives together.
+        It was <time datetime="2013-17-11">17<sup>th</sup> November 2013</time> at our <a href="{{ links.victoria-park }}">favourite spot</a> that we decided to spend the rest of our lives together.
       </p>
       <p>
         After being engaged for more then a year and a half the big day <a href="#the-countdown">will soon be here</a>. We hope that this day will bring joy to all who bear witness as well as ourselves.
