--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -66,7 +66,7 @@ title: The Wedding
     </header>
     <section class="copy constrain-copy">
       <p>
-        If you are travelling from afar, or simply want a place nearby to stay after the wedding, the <a href="{{ links.holiday-inn }}">Holiday Inn</a> at Media City are offerings our guests a discounted price for rooms. Please get in touch for further details.
+        If you are travelling from afar, or simply want a place nearby to stay after the wedding, the <a href="{{ links.holiday-inn }}">Holiday Inn</a> at Media City are offering our guests a discounted price for rooms. Please get in touch for further details.
       </p>
     </section>
   </article>
