--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -9,7 +9,7 @@
 <script src="js/main.js"></script>
 <!-- endbuild -->
 
-{{#if production}}
+{{# if production }}
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
   (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -17,6 +17,6 @@
   e=o.createElement(i);r=o.getElementsByTagName(i)[0];
   e.src='//www.google-analytics.com/analytics.js';
   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','{{ settings.googleUa }}');ga('send','pageview');
+  ga('create','UA-29173059-6');ga('send','pageview');
 </script>
-{{/if}}
+{{/ if }}
