--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -17,6 +17,6 @@
   e=o.createElement(i);r=o.getElementsByTagName(i)[0];
   e.src='//www.google-analytics.com/analytics.js';
   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-29173059-6');ga('send','pageview');
+  ga('create','{{ googleUA }}');ga('send','pageview');
 </script>
 {{/ if }}
