Final times and fixing transform bug for mobile

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -38,7 +38,7 @@ title: The Wedding
           The wedding ceremony will take place at the Patricroft Methodist Church in Eccles.
         </p>
         <p>
-          Times are to be confirmed at a later date.
+          Expecting arrivals from 1pm for a 2pm service.
         </p>
         <a class="btn-cta" href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Directions to the Church</a>
       </section>
@@ -53,7 +53,7 @@ title: The Wedding
           The wedding breakfast and evening party will take place in the lovely <a href="{{ links.compass-room }}">Compass Room</a> at The Lowry Theatre in Salford Quays.
         </p>
         <p>
-          Times are to be confirmed at a later date.
+          Evening guests are welcome from 7.30pm and onwards.
         </p>
         <a class="btn-cta" href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Directions to The Lowry</a>
       </section>
