--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -105,6 +105,7 @@ body {
 	box-sizing: border-box;
 	height: 100%;
 	overflow: hidden;
+	width: 100%;
 }
 
 html {
@@ -125,6 +126,7 @@ html {
 }
 
 body {
+	backface-visibility: hidden;
 	overflow-y: scroll;
 	perspective: 1px;
 	transform-style: preserve-3d;
