--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -2,12 +2,14 @@
 title: The Wedding
 ---
 
-<header id="home" class="page-header">
-  <div class="header-content">
-    <h1 class="header-title">Liam and Gemma</h1>
-    <time class="header-date datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
-  </div>
-</header>
+<div class="page-parallax">
+  <header id="home" class="page-header">
+    <div class="header-content">
+      <h1 class="header-title">Liam and Gemma</h1>
+      <time class="header-date datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
+    </div>
+  </header>
+</div>
 
 <main class="page-main">
   <article id="the-story" class="box">
