--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -127,6 +127,8 @@ html {
 
 body {
 	overflow-y: scroll;
+	perspective: 1px;
+	transform-style: preserve-3d;
 }
 
 h1, h2, h3, h4, p, time {
@@ -184,19 +186,12 @@ a {
  * Header
  **/
 
-.page-parallax {
-	height: 100%;
-	overflow: hidden;
-
-	perspective: 1px;
-}
-
 .page-header {
 	position: relative;
 
 	height: 100%;
 
-	transform-style: preserve-3d;
+	transform-style: inherit;
 
 	&::before {
 		position: absolute;
@@ -257,6 +252,10 @@ a {
 	.header-date {
 
 	}
+}
+
+.page-main {
+	background-color: $primary;
 }
 
 .box {
