--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -1,7 +1,10 @@
 <!-- build:js(.) js/vendor.js -->
 <!-- bower:js -->
+<script src="../../bower_components/jquery/dist/jquery.js"></script>
 <script src="../../bower_components/modernizr/modernizr.js"></script>
 <script src="../../bower_components/WOW/dist/wow.js"></script>
+<script src="../../bower_components/konami-js/konami.js"></script>
+<script src="../../bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
