--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -10,25 +10,28 @@ title: The Wedding
 </header>
 
 <main class="page-main">
-  <article class="box">
+  <article class="box copy constrain-copy">
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
   </article>
 
-  <article id="the-story" class="box">
+  <article id="the-story" class="timeline">
     {{#each timeline }}
-      <header>
-        <h1 class="box-title">{{ title }}</h1>
-      </header>
-      <section class="copy constrain-copy">
-        <ul>
-          {{#each (files images) }}
-            <li>
-              <img src="{{ src }}" alt="{{ name }}" />
-            </li>
+      <section id="{{ slugify title }}" class="timeline-section">
+        <div class="timeline-section-content copy">
+          <h1 class="timeline-section-title">{{ title }}</h1>
+          <p>
+            {{ copy }}
+          </p>
+        </div>
+        <aside class="timeline-section-aside mosiac {{ arrangement }}">
+          {{#each images }}
+            <div class="mosiac-tile">
+              <a class="mosiac-image magnific-gallery-image" style="background-image: url({{ this }});" href="{{ this }}"></a>
+            </div>
           {{/each }}
-        </ul>
+        </aside>
       </section>
     {{/each }}
   </article>
@@ -36,10 +39,10 @@ title: The Wedding
 
 <footer id="the-countdown" class="page-footer box">
   <div class="footer-content constrain-copy">
-    <div class="countdown-clock">
-      <h2>Footer shizzle</h2>
+    <div class="copy">
+      <h2>A final thank you to all who came. You were there when we began a new chapter of our lives! Hopefully we'll see you in the new chapter too!</h2>
     </div>
-    <div class="konami-code">
+    <div class="konami-code mfp-hide white-popup">
       <h2>We've been married...</h2>
       <div id="marriage-timer"></div>
     </div>
