--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -29,6 +29,7 @@
 <!-- build:css(.) css/vendor.css -->
 <!-- bower:css -->
 <link rel="stylesheet" href="../../bower_components/normalize-css/normalize.css" />
+<link rel="stylesheet" href="../../bower_components/magnific-popup/dist/magnific-popup.css" />
 <!-- endbower -->
 <!-- endbuild -->
 
