--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -40,7 +40,7 @@ title: The Wedding
 <footer id="the-countdown" class="page-footer box">
   <div class="footer-content constrain-copy">
     <div class="copy">
-      <h2>A final thank you to all who came. You were there when we began a new chapter of our lives! Hopefully we'll see you in the new chapter too!</h2>
+      <h2>A final thank you to all who came. You were there when we began a new chapter in our lives! Hopefully we'll see you whilst our story continues!</h2>
     </div>
     <div class="konami-code mfp-hide white-popup">
       <h2>We've been married...</h2>
