Getting closer to populating with real content, need to check with the Mrs

--- a/app/templates/layouts/default.hbs
+++ b/app/templates/layouts/default.hbs
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js">
+<html id="page" class="no-js">
   <head>
     {{> head }}
   </head>
-  <body>
+  <body id="content">
     {{> body }}
 
     {{> foot }}
