--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,15 +69,38 @@ $easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
   animation-fill-mode: both;
 }
 
+.animate-fade-in {
+	animation-name: fade-in;
+	animation-timing-function: $easeOutQuint;
+}
+
 .animate-fade-up {
 	animation-name: fade-up;
 	animation-timing-function: $easeOutQuint;
 }
 
+.animate-fade-down {
+	animation-name: fade-down;
+	animation-timing-function: $easeOutQuint;
+}
+
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+}
+
 @keyframes fade-up {
 	from {
 		opacity: 0;
-		transform: translateY(2em);
+		transform: translateY(2rem);
+	}
+}
+
+@keyframes fade-down {
+	from {
+		opacity: 0;
+		transform: translateY(-2rem);
 	}
 }
 
@@ -196,34 +219,32 @@ a {
 	position: relative;
 	overflow: hidden;
 
-	padding: 2em 1em;
+	padding: 15em 1em 3em;
 
 	background-color: $secondary;
-	background-image: url(../img/tiny/little-bear-squeeze.jpg);
-	background-position: center top;
+	background-image: url(../img/tiny/little-bear-squeeze-tall.jpg);
+	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 
-	@include bp("tiny") {
-		padding: 2em 1em;
-
-		background-attachment: fixed;
+	&:hover,
+	&:focus {
+		.header-content {
+			text-shadow: 1px 1px 3px $font;
+			transform: scale(1.1);
+		}
 	}
-	@include bp("small") {
-		padding: 3em 1em;
 
-		background-image: url(../img/medium/little-bear-squeeze.jpg);
+	@include bp("small") {
+		background-image: url(../img/medium/little-bear-squeeze-tall.jpg);
 	}
 	@include bp("medium") {
-		padding: 4em 1em;
-
 		background-image: url(../img/large/little-bear-squeeze.jpg);
-		background-position: center 30%;
+		background-position: center;
 	}
 	@include bp("large") {
-		padding: 5em 1em;
-
 		background-image: url(../img/little-bear-squeeze.jpg);
+		background-position: center bottom;
 	}
 
 	.header-content {
@@ -231,6 +252,8 @@ a {
 
 		text-align: center;
 		text-shadow: 1px 1px 1px $font;
+
+		transition: all $easeOutQuint 400ms;
 
 		@include bp("tiny") {
 			font-size: 1.5rem;
@@ -247,12 +270,81 @@ a {
 	}
 }
 
+
+
+.timeline-navigaton {
+	background-color: $secondary;
+
+	@include bp("medium") {
+		padding: 2.5em 1.5em;
+	}
+
+	.js & {
+		display: none;
+
+		&.is-targeted {
+			display: block;
+		}
+	}
+}
+
+.navigation-list {
+	@extend %clearfix;
+	display: block;
+	width: 35em;
+		max-width: 100%;
+
+	list-style: none;
+	margin: 0 auto;
+	padding: 0;
+
+	text-align: left;
+	text-indent: 1.5em;
+
+	counter-reset: navigation;
+}
+
+.navigation-item {
+	position: relative;
+	display: block;
+	border: 1px solid $primary;
+
+	+ .navigation-item {
+		border-top-width: 0;
+	}
+}
+
+.navigation-link,
+.navigation-link--skip-counter {
+	display: block;
+	padding: 1em;
+
+	background-color: $tertiary;
+	color: white;
+
+	transition: background $easeOutQuint 300ms;
+
+	&:hover,
+	&:focus {
+		background-color: darken($tertiary, 20%);
+		color: white;
+	}
+}
+
+.navigation-link {
+	&:before {
+		counter-increment: navigation;
+		content: counter(navigation) ". ";
+	}
+}
+
 /**
  * Content
  **/
 
 .box {
 	padding: 2.5em 1.5em;
+
 	@include bp("small") {
 		padding: 3.5em 2.5em;
 	}
@@ -260,8 +352,58 @@ a {
 	.box-title {
 		line-height: 1;
 	}
-	.box-caption {
+}
 
+.box--breakout {
+	position: relative;
+
+	padding: 1.5em 1em;
+
+	color: $primary;
+
+	&:before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+
+		display: block;
+		height: 100%;
+		width: 100%;
+
+		background-color: $secondary;
+		background-image: url(../img/tiny/flower.jpg);
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+
+		content: "";
+		opacity: 0.25;
+	}
+
+	@include bp("small") {
+		padding: 3em 2em;
+	}
+
+	.box-title {
+		line-height: 1;
+		margin: 0;
+	}
+
+	.breakout-link {
+		display: block;
+		color: darken($tertiary, 20%);
+		transition: all $easeOutQuint 300ms;
+
+		&:hover,
+		&:focus {
+			color: darken($tertiary, 40%);
+		}
+
+		&.target-activated {
+			color: darken($tertiary, 40%);
+			transform: scale(1.1);
+		}
 	}
 }
 
@@ -305,7 +447,7 @@ a {
 	}
 
 	.timeline-section-aside {
-		background-color: $tertiary;
+		background-color: $secondary;
 		min-height: 20em;
 		overflow: hidden;
 
