Adding bits for menu functionality

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -548,7 +548,9 @@ a {
 		&:focus {
 			.mosiac-tile {
 				&:nth-child(2) {
-					opacity: 0;
+					.mosiac-image {
+						opacity: 0;
+					}
 				}
 			}
 		}
