--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -542,6 +542,17 @@ a {
 		}
 	}
 
+	&.tiles--1-standalone {
+
+		.mosiac-tile {
+			top: 0;
+			left: 0;
+
+			width: 100%;
+			height: 100%;
+		}
+	}
+
 	&.tiles--2-switch {
 
 		&:hover,
@@ -565,6 +576,7 @@ a {
 			&:nth-child(1) {
 				z-index: 2;
 			}
+
 			&:nth-child(2) {
 				z-index: 1;
 			}
