--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,6 +62,9 @@ $easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
   .wow {
     visibility: hidden;
   }
+	.wow-wait-lazy-load {
+		animation-play-state: paused;
+	}
 }
 
 .animated {
