--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -5,6 +5,9 @@
 <script src="../../bower_components/WOW/dist/wow.js"></script>
 <script src="../../bower_components/konami-js/konami.js"></script>
 <script src="../../bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
+<script src="../../bower_components/lazyloadxt/dist/jquery.lazyloadxt.js"></script>
+<script src="../../bower_components/lazyloadxt/dist/jquery.lazyloadxt.extra.js"></script>
+<script src="../../bower_components/lazyloadxt/dist/jquery.lazyloadxt.bg.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
