--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <title>{{ title }} | {{ website }}</title>
-<meta name="description" content="">
+<meta name="description" content="{{ description }}">
 <meta name="viewport" content="width=device-width">
 <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
@@ -22,6 +22,19 @@
 <meta name="msapplication-TileImage" content="img/favicons/mstile-144x144.png">
 <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+
+{{!-- Twitter Meta Data --}}
+<meta name="twitter:card" content="photo" />
+<meta name="twitter:site" content="{{ twitter.username }}" />
+<meta name="twitter:title" content="{{ title }} | {{ website }}" />
+<meta name="twitter:image" content="{{ twitter.image }}" />
+
+{{!-- Facebook Meta Data --}}
+<meta property="og:url" content="http://liamandgemma.co.uk/" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="{{ title }}" />
+<meta property="og:description" content="{{ description }}" />
+<meta property="og:image" content="{{ twitter.image }}" />
 
 <link href='http://fonts.googleapis.com/css?family=Great+Vibes|Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
