The first draft of the copy for the website

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -12,8 +12,24 @@ title: The Wedding
 <main class="page-main">
   <article class="box copy constrain-copy">
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Welcome back to the website of Liam and now Gemma Walsh! As you know the Wedding day has come and gone, we had such a wonderful day and could not be happier right now. For those who attended, at any part of the day, we hoped you enjoyed it too.
     </p>
+    <p>
+      We want to say thank you so much to everyone that came and to all those sent their well wishes and support. We could not hope to be so lucky, we have such an amazing group of family and friends and we love them all with all our hearts!
+    </p>
+    <p>
+      This website will serve for now as a rememberance of the day and give people some insights to bits they may not have seen, myself (Liam) included. We want to provide special thanks and mentions to those who made the day possible.
+    </p>
+    <p>
+      Firstly thanks to <a href="{{ links.the-lowry }}">The Lowry</a> who provided an amazing venue with <a href="{{ links.compass-room }}">The Compass Room</a> and for the incredible food and quality of service. Secondly to <a href="{{ links.eventures }}">Eventures</a> who decorated both the church and The Lowry. They created the magical atmosphere for an extra special day. Thirdly, thanks to <a href="{{ links.kensington-wedding-cars }}">Kensington Wedding Cars</a> for providing a beautiful car for travel, excellent friendly service and for getting us where we needed to be on time.
+    </p>
+    <p>
+      Lastly we'd like to say a big thank you to <a href="{{ links.zen }}">Zen Photographic</a> for capturing all those magical moments so that we can share and relive those memories forever. We've picked some of the best snaps from the amazing index she has provided to try and recreate the moments of the day.
+    </p>
+    <p>
+      We hope you enjoy :D
+    </p>
+    </ul>
   </article>
 
   <article>
@@ -58,7 +74,7 @@ title: The Wedding
 <footer id="the-countdown" class="page-footer box">
   <div class="footer-content constrain-copy">
     <div class="copy wow animate-fade-down">
-      <h2>A final thank you to all who came. You were there when we began a new chapter in our lives! Hopefully we'll see you whilst our story continues!</h2>
+      <h2>A final thank you to all who came. You were there when we began a new chapter in our lives! We hope you all feature in the rest of our life story.</h2>
     </div>
     <div class="konami-code mfp-hide white-popup">
       <h2>We've been married...</h2>
