Changing to double quotes... it was bothering me

--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -13,7 +13,7 @@
 <meta property="og:description" content="{{ description }}" />
 <meta property="og:image" content="{{ twitter.image }}" />
 
-<link href='http://fonts.googleapis.com/css?family=Great+Vibes|Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Great+Vibes|Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 <!-- build:css(.) css/vendor.css -->
