--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -682,3 +682,20 @@ a {
 		background-image: linear-gradient($secondary 0%, transparent 60%), url(../img/large/walking-away-wide.jpg);
 	}
 }
+
+/*------------------------------------*\
+  No JS stylings
+\*------------------------------------*/
+
+.js {
+	noscript {
+		display: none !important;
+	}
+}
+
+.no-js {
+	.mosiac-image--no-js {
+		width: 100%;
+		height: 100%;
+	}
+}
