Updated typos and some suggestions from the wife

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -652,6 +652,19 @@ a {
 	}
 }
 
+.columns {
+	text-align: left;
+	max-width: 45em;
+	margin-left: auto;
+	margin-right: auto;
+
+	@include bp("medium") {
+		column-count: 2;
+		column-gap: 4em;
+		column-rule: 1px dotted lighten(black, 90%);
+	}
+}
+
 /**
  * Footer
  **/
