--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -10,26 +10,28 @@ title: The Wedding
 </header>
 
 <main class="page-main">
-  <article class="box copy constrain-copy">
-    <p>
-      Welcome back to the website of Liam and now Gemma Walsh! As you know the Wedding day has come and gone, we had such a wonderful day and could not be happier right now. For those who attended, at any part of the day, we hoped you enjoyed it too.
-    </p>
-    <p>
-      We want to say thank you so much to everyone that came and to all those sent their well wishes and support. We could not hope to be so lucky, we have such an amazing group of family and friends and we love them all with all our hearts!
-    </p>
-    <p>
-      This website will serve for now as a rememberance of the day and give people some insights to bits they may not have seen, myself (Liam) included. We want to provide special thanks and mentions to those who made the day possible.
-    </p>
-    <p>
-      Firstly thanks to <a href="{{ links.the-lowry }}">The Lowry</a> who provided an amazing venue with <a href="{{ links.compass-room }}">The Compass Room</a> and for the incredible food and quality of service. Secondly to <a href="{{ links.eventures }}">Eventures</a> who decorated both the church and The Lowry. They created the magical atmosphere for an extra special day. Thirdly, thanks to <a href="{{ links.kensington-wedding-cars }}">Kensington Wedding Cars</a> for providing a beautiful car for travel, excellent friendly service and for getting us where we needed to be on time.
-    </p>
-    <p>
-      Lastly we'd like to say a big thank you to <a href="{{ links.zen }}">Zen Photographic</a> for capturing all those magical moments so that we can share and relive those memories forever. We've picked some of the best snaps from the amazing index she has provided to try and recreate the moments of the day.
-    </p>
-    <p>
-      We hope you enjoy :D
-    </p>
-    </ul>
+  <article class="box copy">
+    <div class="columns">
+      <p>
+        Welcome back to the website of Liam and now Gemma Walsh! As you know the Wedding day has come and gone, we had such a wonderful day and could not be happier right now. For those who attended, at any part of the day, we hoped you enjoyed it too.
+      </p>
+      <p>
+        We want to say thank you so much to everyone that came and to all those who sent their well wishes and support. We could not hope to be so lucky, we have such an amazing group of family and friends and we love you all!
+      </p>
+      <p>
+        This website will serve for now as a remembrance of the day and give people some insights to bits they may not have seen, myself (Liam) included. We want to provide special thanks and mentions to those who made the day possible.
+      </p>
+      <p>
+        Firstly thanks to Patricroft Methodist Church and <a href="{{ links.the-lowry }}">The Lowry</a> who provided an amazing venue with <a href="{{ links.compass-room }}">The Compass Room</a> and for the incredible food and quality of service. Secondly to <a href="{{ links.eventures }}">Eventures</a> who decorated both the church and The Lowry. They created the magical atmosphere for an extra special day. Thirdly, thanks to <a href="{{ links.kensington-wedding-cars }}">Kensington Wedding Cars</a> for providing a beautiful car for travel, excellent friendly service and for getting us where we needed to be on time.
+      </p>
+      <p>
+        Lastly we'd like to say a big thank you to <a href="{{ links.zen }}">Zen Photographic</a> for capturing all those magical moments so that we can share and relive those memories forever. We've picked some of the best snaps from the amazing index she has provided to try and recreate the moments of the day.
+      </p>
+      <p>
+        We hope you enjoy :D
+      </p>
+      <h3>Liam &amp; Gemma xx</h3>
+    </div>
   </article>
 
   <article>
@@ -56,7 +58,7 @@ title: The Wedding
         <div class="timeline-section-content copy">
           <h1 class="timeline-section-title wow animate-fade-up">{{ title }}</h1>
           <p class="wow animate-fade-up" data-wow-delay="100ms">
-            {{ copy }}
+            {{{ copy }}}
           </p>
         </div>
         <aside class="timeline-section-aside mosiac {{ arrangement }}">
