--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -4,6 +4,7 @@
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:site" content="{{ twitter.username }}" />
 <meta name="twitter:title" content="{{ title }} | {{ website }}" />
+<meta name="twitter:description" content="{{ description }}" />
 <meta name="twitter:image" content="{{ twitter.image }}" />
 
 {{!-- Facebook Meta Data --}}
