--- a/app/templates/partials/happy-birthday--foot.hbs
+++ b/app/templates/partials/happy-birthday--foot.hbs
@@ -1,6 +1,6 @@
 <!-- build:js(.) js/happy-birthday-vendor.js -->
-<script src="../../bower_components/jquery/dist/jquery.js"></script>
-<script src="../../bower_components/WOW/dist/wow.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/WOW/dist/wow.js"></script>
 <!-- endbuild -->
 
 <!-- build:js(.tmp) js/happy-birthday.js -->
