--- a/css/main.css
+++ b/css/main.css
@@ -107,10 +107,20 @@ a {
 
 
 
-@media (min-width: 35em) {
+@media (min-width: 37.5em) {
 
 	.letter {
 		font-size: 3vw;
+	}
+
+}
+
+
+
+@media (min-width: 50em) {
+
+	.letter {
+		font-size: 2.5vw;
 		width: 80vw;
 	}
 
@@ -118,7 +128,7 @@ a {
 
 
 
-@media (min-width: 37.5em) {
+@media (min-width: 70em) {
 
 	.letter {
 		font-size: 2vw;
